--- a/config/breakout_config.yaml
+++ b/config/breakout_config.yaml
@@ -1,4 +1,4 @@
-device: cuda
+device: cpu
 train:
   batch_size: 128
   train_epochs: 1000
@@ -48,4 +48,5 @@ model:
         args: [256, 4]
 env:
   name: Breakout
-
+test:
+  video_path: ./video/breakout_150.mp4
